--- a/index.html
+++ b/index.html
@@ -1,111 +1,7 @@
-<!doctype html>
-<html lang="en">
-<head>
-  <meta charset="utf-8"/>
-  <meta name="viewport" content="width=device-width,initial-scale=1"/>
-  <title>Winter Arc — Wapp</title>
-  <link rel="stylesheet" href="assets/css/style.min.css">
-</head>
-<body>
-  <div class="bg-wrap">
-    <img class="bg-img" src="assets/images/background.jpeg" alt="background">
-    <canvas id="bgCanvas" class="bg-canvas" aria-hidden="true"></canvas>
-    <div class="noise"></div>
-    <div class="ghost">WTR</div>
-  </div>
-
-  <header class="site-header">
-    <div class="brand">
-      <div class="badge">$WTR</div>
-      <div class="brand-title">Winter Arc</div>
-    </div>
-    <nav class="nav">
-      <a class="nav-link" href="#about">About</a>
-      <a class="nav-link" href="#tokenomics">Tokenomics</a>
-      <a class="nav-link" href="#vision">Vision</a>
-      <a class="nav-link" href="#roadmap">Roadmap</a>
-      <a class="nav-link nav-pre" href="#prereg">Pre-Reg</a>
-      <div class="socials">
-        <a href="https://t.me/wtrcoin" target="_blank">Telegram</a>
-        <a href="https://x.com/wtr_coin" target="_blank">X</a>
-      </div>
-    </nav>
-  </header>
-
-  <main>
-    <section class="hero">
-      <div class="hero-inner">
-        <h1 class="hero-title">Winter Arc</h1>
-        <p class="hero-sub">Survive the arc. Earn $WTR. Level up your reality.</p>
-        <div class="hero-actions">
-          <a id="ctaPrereg" class="btn-primary btn-full" href="#prereg">Enter Pre-Registration</a>
-        </div>
-      </div>
-    </section>
-
-    <section id="about" class="panel">
-      <div class="panel-inner">
-        <h2 class="panel-title">What is Winter Arc?</h2>
-        <p class="panel-text">Winter Arc is an activity-driven application where users complete real-world “Arc” tasks — cold exposure, long runs, radical self-challenges — and earn $WTR tokens for verified completion. Track your profile, timeline, levels and claim tokens in-app.</p>
-      </div>
-    </section>
-
-    <section id="tokenomics" class="panel alt">
-      <div class="panel-inner tokenomics">
-        <h2 class="panel-title">Tokenomics</h2>
-        <div class="tokenomics-grid">
-          <div class="stat"><span class="number" data-target="1000000000">0</span><span class="label">Total Supply</span></div>
-          <div class="stat"><span class="number" data-target="70">0</span><span class="label">% Liquidity</span></div>
-          <div class="stat"><span class="number" data-target="20">0</span><span class="label">% Community</span></div>
-          <div class="stat"><span class="number" data-target="10">0</span><span class="label">% Dev Locked</span></div>
-        </div>
-      </div>
-    </section>
-
-    <section id="vision" class="panel">
-      <div class="panel-inner vision">
-        <h2 class="panel-title">Vision</h2>
-        <div class="vision-content">
-          <p class="panel-text">Winter Arc isn’t just another token. It’s the backbone of a lifestyle app built on radical challenges, rewards and community. Complete Arcs, level up your profile, earn real progression and unlock seasonal drops. $WTR fuels the economy, staking and rewards.</p>
-          <div class="vision-art"></div>
-        </div>
-      </div>
-    </section>
-
-    <section id="roadmap" class="panel">
-      <div class="panel-inner">
-        <h2 class="panel-title">Roadmap</h2>
-        <div class="roadmap-grid">
-          <div class="roadmap-item"><h4>Q4 2025</h4><p>Idea launch, concept validation, community start</p></div>
-          <div class="roadmap-item"><h4>Q1 2026</h4><p>Token launch, early adopters, pre-app version</p></div>
-          <div class="roadmap-item"><h4>Q2 2026</h4><p>App beta, listing, staking, scaling user base</p></div>
-          <div class="roadmap-item"><h4>Q3 2026</h4><p>Expansion, partnerships, seasonal events</p></div>
-        </div>
-      </div>
-    </section>
-
-    <section id="prereg" class="panel prereg">
-      <div class="panel-inner">
-        <h2 class="panel-title">Pre-Registration</h2>
-        <form class="prereg-form">
-          <input type="text" placeholder="Your Name" required>
-          <input type="email" placeholder="Your Email" required>
-          <button type="submit" class="btn-primary">Submit</button>
-        </form>
-      </div>
-    </section>
-  </main>
-
-  <footer class="site-footer">
-    <div class="footer-inner">
-      <div>© 2025 Winter Arc</div>
-      <div class="links">
-        <a href="https://t.me/wtrcoin" target="_blank">Telegram</a>
-        <a href="https://x.com/wtr_coin" target="_blank">X</a>
-      </div>
-    </div>
-  </footer>
-
-  <script src="assets/js/main.min.js"></script>
-</body>
-</html>
+<!DOCTYPE html><html lang="en"><head><meta charset="UTF-8"><meta name="viewport" content="width=device-width,initial-scale=1.0"><title>Winter Arc Token</title><link rel="stylesheet" href="style.min.css"></head><body>
+<header class="header"><div class="logo">WTR</div><nav class="nav"><a href="https://t.me/wtrcoin" target="_blank" class="nav-link">Telegram</a><a href="https://x.com/wtr_coin" target="_blank" class="nav-link">X</a></nav></header>
+<section class="hero"><h1 class="coming-soon">COMING SOON</h1></section>
+<section class="tokenomics"><h2>Tokenomics</h2><div class="stats"><div class="stat"><span class="number" data-target="1000000000">0</span><p>Total Supply</p></div><div class="stat"><span class="number" data-target="200000000">0</span><p>Locked Dev Tokens</p></div><div class="stat"><span class="number" data-target="500000000">0</span><p>Community</p></div></div></section>
+<section class="vision"><h2>Our Vision</h2><div class="vision-content"><div class="vision-text"><p>Winter Arc Token ($WTR) is more than just a token. We aim to build an ecosystem with strong community, decentralized governance and innovative apps.</p></div><div class="vision-art"></div></div></section>
+<section class="roadmap"><h2>Roadmap</h2><div class="timeline"><div class="milestone"><span class="dot"></span><div class="content"><h3>Q1</h3><p>Launch website, build community</p></div></div><div class="milestone"><span class="dot"></span><div class="content"><h3>Q2</h3><p>Token launch & listing</p></div></div><div class="milestone"><span class="dot"></span><div class="content"><h3>Q3</h3><p>App prototype</p></div></div><div class="milestone"><span class="dot"></span><div class="content"><h3>Q4</h3><p>Global expansion</p></div></div></div></section>
+<script src="main.min.js"></script></body></html>
