--- a/index.html
+++ b/index.html
@@ -1,1 +1,91 @@
-<!DOCTYPE html><html lang="en"><head><meta charset="UTF-8"><meta name="viewport" content="width=device-width,initial-scale=1.0"><title>Winter Arc Token</title><link rel="stylesheet" href="style.min.css"></head><body><header class="header"><div class="logo">WTR</div><nav class="nav"><a href="#" class="nav-link">Home</a><a href="#tokenomics" class="nav-link">Tokenomics</a><a href="#vision" class="nav-link">Vision</a><a href="#roadmap" class="nav-link">Roadmap</a><a href="#prereg" class="nav-cta">Pre-register</a></nav></header><section class="hero"><h1 class="coming-soon">COMING SOON</h1><div class="socials"><a href="https://x.com/wtr_coin" target="_blank" class="social-btn">X</a><a href="https://t.me/wtrcoin" target="_blank" class="social-btn">TG</a></div></section><section id="tokenomics" class="tokenomics panel"><div class="panel-inner"><h2>Tokenomics</h2><div class="stats"><div class="stat"><span class="number" data-target="1000000000">0</span><p>Total Supply</p></div><div class="stat"><span class="number" data-target="200000000">0</span><p>Locked Dev Tokens</p></div><div class="stat"><span class="number" data-target="50000000">0</span><p>Liquidity Pool</p></div></div></div></section><section id="vision" class="vision panel"><div class="vision-content"><div class="vision-text"><h2>Our Vision</h2><p>Winter Arc Token ($WTR) is not just a token, it’s a movement. With secure supply, locked dev tokens, and future app integration, $WTR aims to bring crypto closer to the people.</p></div><div class="vision-art"></div></div></section><section id="roadmap" class="roadmap panel"><h2>Roadmap</h2><div class="timeline"><div class="milestone"><span class="dot"></span><p>Q1 2025 - Launch of WTR</p></div><div class="milestone"><span class="dot"></span><p>Q2 2025 - App Alpha Release</p></div><div class="milestone"><span class="dot"></span><p>Q3 2025 - Exchange Listings</p></div><div class="milestone"><span class="dot"></span><p>Q4 2025 - Expansion & Partnerships</p></div></div></section><section id="prereg" class="panel prereg"><h2>Pre-register</h2><form id="preregForm"><input type="email" placeholder="Enter your email" required><button type="submit" id="ctaPrereg">Join Waitlist</button><p class="form-message"></p></form></section><script src="main.min.js"></script></body></html>
+<!doctype html>
+<html lang="en">
+<head>
+<meta charset="utf-8"/>
+<meta name="viewport" content="width=device-width,initial-scale=1"/>
+<title>Winter Arc — Wapp</title>
+<link rel="stylesheet" href="assets/css/style.min.css">
+</head>
+<body>
+<div class="bg-wrap">
+  <img class="bg-img" src="assets/images/background.jpeg" alt="background">
+  <canvas id="bgCanvas" class="bg-canvas" aria-hidden="true"></canvas>
+  <div class="noise"></div>
+  <div class="ghost">COMING SOON</div>
+</div>
+
+<header class="site-header">
+  <div class="brand"><div class="badge">$WTR</div><div class="brand-title">Winter Arc</div></div>
+  <nav class="nav">
+    <a class="nav-link" href="#about">About</a>
+    <a class="nav-link" href="#tokenomics">Tokenomics</a>
+    <a class="nav-link" href="#vision">Vision</a>
+    <a class="nav-link" href="#roadmap">Roadmap</a>
+    <a class="nav-cta" href="prereg.html">Pre-Register</a>
+  </nav>
+</header>
+
+<main>
+  <section class="hero">
+    <div class="hero-inner">
+      <h1 class="hero-title">Winter Arc</h1>
+      <p class="hero-sub">Survive the arc. Earn $WTR. Level up your reality.</p>
+      <div class="hero-actions"><a id="ctaPrereg" class="btn-primary btn-full" href="prereg.html">Enter Pre-Registration</a></div>
+    </div>
+  </section>
+
+  <section id="about" class="panel">
+    <div class="panel-inner">
+      <h2 class="panel-title">What is Winter Arc?</h2>
+      <p class="panel-text">Winter Arc is an activity-driven app where users complete real-world “Arc” tasks — cold exposure, long runs, radical self-challenges — and earn $WTR tokens for verified completion. Track profile, timeline, levels, and claim tokens in-app. Challenge yourself, earn, and grow.</p>
+    </div>
+  </section>
+
+  <section id="tokenomics" class="panel alt">
+    <div class="panel-inner tokenomics">
+      <h2 class="panel-title">Tokenomics</h2>
+      <div class="tokenomics-grid">
+        <div class="stat"><span class="number" data-target="1000000000">0</span><span class="label">Total Supply</span></div>
+        <div class="stat"><span class="number" data-target="70">0</span><span class="label">% Liquidity</span></div>
+        <div class="stat"><span class="number" data-target="20">0</span><span class="label">% Community</span></div>
+        <div class="stat"><span class="number" data-target="10">0</span><span class="label">% Dev Locked</span></div>
+      </div>
+    </div>
+  </section>
+
+  <section id="vision" class="panel">
+    <div class="panel-inner vision">
+      <h2 class="panel-title">Vision</h2>
+      <div class="vision-content">
+        <p class="panel-text">Winter Arc isn’t just another token. It’s the backbone of a lifestyle app built on radical challenges, rewards and community. Complete Arcs, level up your profile, earn real progression and unlock seasonal drops. $WTR fuels the economy, staking and rewards.</p>
+        <div class="vision-art interactive"></div>
+      </div>
+    </div>
+  </section>
+
+  <section id="roadmap" class="panel alt">
+    <div class="panel-inner roadmap">
+      <h2 class="panel-title">Roadmap</h2>
+      <div class="roadmap-timeline">
+        <div class="milestone"><span>Q1 2025</span><p>Alpha launch of Wapp, early user feedback.</p></div>
+        <div class="milestone"><span>Q2 2025</span><p>Tokenomics implementation and staking.</p></div>
+        <div class="milestone"><span>Q3 2025</span><p>Community events, seasonal challenges.</p></div>
+        <div class="milestone"><span>Q4 2025</span><p>Global launch, marketplace and rewards expansion.</p></div>
+      </div>
+    </div>
+  </section>
+
+</main>
+
+<footer class="site-footer">
+  <div class="footer-inner">
+    <div>© 2025 Winter Arc</div>
+    <div class="links">
+      <a href="https://t.me/wtrcoin" target="_blank">Telegram</a>
+      <a href="https://x.com/wtr_coin" target="_blank">X</a>
+    </div>
+  </div>
+</footer>
+<script src="assets/js/main.min.js"></script>
+</body>
+</html>
